feat: add package-aware shopping quantities